--- a/templates/cart.html
+++ b/templates/cart.html
@@ -6,41 +6,29 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Melon Name</th>
+            <th>Melon Name:</th>
             <th>Quantity</th>
             <th>Price</th>
             <th>Total</th>
         </tr>
         </thead>
         <tbody>
+        {% for item in cart_list %}
         <tr>
-            <td>Ancient Watermelon</td>
-            <td>5</td>
-            <td>$3.00</td>
-            <td>$15.00</td>
+            
+            <td>{{ item.common_name }}</td>
+            <td>{{ item.qty }}</td>
+            <td>{{ item.price }}</td>
+            <td>${{ item.total }}</td>
+           
         </tr>
-        <tr>
-            <td>Charleston Gray</td>
-            <td>2</td>
-            <td>$2.00</td>
-            <td>$4.00</td>
-        </tr>
-        <tr>
-            <td>Crenshaw</td>
-            <td>1</td>
-            <td>$2.00</td>
-            <td>$2.00</td>
-        </tr>
-        <tr>
-            <td>Ledmon Watermelon</td>
-            <td>2</td>
-            <td>$3.00</td>
-            <td>$6.00</td>
+        {% endfor %}
+
         </tr>
         </tbody>
     </table>
 
-    <h3>Total: $27.00</h3>
+    <h3>Total: ${{ total }}</h3>
 
     <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 
